test/errors/resolution/incompatibleTypeAndInit.compopts
--detailed-errors # incompatibleTypeAndInit-detailed.good
--no-detailed-errors # incompatibleTypeAndInit-brief.good
